# zhuangyuan-first

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: bigram_model.py  main.py
assignment2/: api.py  cnn_cifar10.pt  model.py  part3_answers.md  train.py
